bump checkstyle + cleanups